; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/extr_xattr.c_ocfs2_read_xattr_block.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/extr_xattr.c_ocfs2_read_xattr_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.buffer_head = type { i32 }

@ocfs2_validate_xattr_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, i32, %struct.buffer_head**)* @ocfs2_read_xattr_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ocfs2_read_xattr_block(%struct.inode* %0, i32 %1, %struct.buffer_head** %2) #0 {
  %4 = alloca %struct.inode*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.buffer_head**, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.buffer_head*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.buffer_head** %2, %struct.buffer_head*** %6, align 8
  %9 = load %struct.buffer_head**, %struct.buffer_head*** %6, align 8
  %10 = load %struct.buffer_head*, %struct.buffer_head** %9, align 8
  store %struct.buffer_head* %10, %struct.buffer_head** %8, align 8
  %11 = load %struct.inode*, %struct.inode** %4, align 8
  %12 = call i32 @INODE_CACHE(%struct.inode* %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @ocfs2_validate_xattr_block, align 4
  %15 = call i32 @ocfs2_read_block(i32 %12, i32 %13, %struct.buffer_head** %8, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %25, label %18

18:                                               ; preds = %3
  %19 = load %struct.buffer_head**, %struct.buffer_head*** %6, align 8
  %20 = load %struct.buffer_head*, %struct.buffer_head** %19, align 8
  %21 = icmp ne %struct.buffer_head* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %18
  %23 = load %struct.buffer_head*, %struct.buffer_head** %8, align 8
  %24 = load %struct.buffer_head**, %struct.buffer_head*** %6, align 8
  store %struct.buffer_head* %23, %struct.buffer_head** %24, align 8
  br label %25

25:                                               ; preds = %22, %18, %3
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @ocfs2_read_block(i32, i32, %struct.buffer_head**, i32) #1

declare dso_local i32 @INODE_CACHE(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
